--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   flutter_bloc: ^8.1.1
   auto_route: ^5.0.2
   auto_route_generator: ^5.0.3
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
