--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   auto_route: ^5.0.2
   auto_route_generator: ^5.0.3
   http: ^0.13.5
+  flutter_secure_storage: ^6.0.0
 
 dev_dependencies:
   flutter_test:
