--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   auto_route_generator: ^5.0.3
   http: ^0.13.5
   flutter_secure_storage: ^6.0.0
+  carousel_slider: ^4.1.1
 
 dev_dependencies:
   flutter_test:
