--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   http: ^0.13.5
   flutter_secure_storage: ^6.0.0
   carousel_slider: ^4.1.1
+  flutter_svg: ^1.1.6
 
 dev_dependencies:
   flutter_test:
