--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   flutter_secure_storage: ^6.0.0
   carousel_slider: ^4.1.1
   flutter_svg: ^1.1.6
+  flutter_layout_grid: ^2.0.1
 
 dev_dependencies:
   flutter_test:
