--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   carousel_slider: ^4.1.1
   flutter_svg: ^1.1.6
   flutter_layout_grid: ^2.0.1
+  shimmer: ^2.0.0
 
 dev_dependencies:
   flutter_test:
