--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   flutter_svg: ^1.1.6
   flutter_layout_grid: ^2.0.1
   shimmer: ^2.0.0
+  intl: ^0.17.0
+  animations: ^2.0.7
 
 dev_dependencies:
   flutter_test:
@@ -70,8 +72,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/images/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
