--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   shimmer: ^2.0.0
   intl: ^0.17.0
   animations: ^2.0.7
+  flutter_markdown: ^0.6.13
 
 dev_dependencies:
   flutter_test:
