--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -12,18 +12,21 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  android:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
+        with:
+          distribution: 'zulu'
+          java-version: '11'
       - uses: subosito/flutter-action@v2
       - run: flutter pub get
       - run: flutter build apk
       - run: flutter build appbundle
 
-  build2:
+  macos:
     runs-on: macos-latest
     steps:
     - uses: actions/checkout@v3
@@ -33,11 +36,3 @@ jobs:
         architecture: x64
     - run: flutter pub get
     - run: flutter build ios --release --no-codesign
-    
-  build3:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: subosito/flutter-action@v2
-      - run: flutter pub get
-      - run: flutter build web
