--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,10 +19,9 @@ jobs:
       - uses: actions/checkout@v3
       - uses: actions/setup-java@v2
         with:
-          java-version: '12.x'
+          distribution: 'zulu'
+          java-version: '11'
       - uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '2.2.0'
       - run: flutter pub get
       - run: flutter build apk --debug --split-per-abi
       - run: |
